# openneuro

./: .buildinfo  .codecov.yml  .codespellrc  .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .pnp.cjs  .pnp.js  .prettierignore  .prettierrc  .scss-lint.yml  .yarnrc.docker.yaml  .yarnrc.yml  CNAME  Dockerfile  README.md  _rediraffe_redirected.json  api.html  app.js  architecture.html  babel.config.js  circle.yml  codecov.yml  codegen.ts  codegen.yml  config.env.example  config.example  config.example.js  config.js  config.sample.js  dataset-worker  deno.json  docker-compose.dev.yml  docker-compose.yml  doczrc.js  (+29 more)
.circleci/: config.yml
.github/: dependabot.yml
.husky/: pre-commit
__mocks__/: ioredis.js  superagent.js
_sources/: api.md.txt  architecture.md.txt  git.md.txt  monitoring.md.txt  user_guide.md.txt
api/: index.html
app/: .babelrc  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  config.js  jestsetup.js  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
cli/: README.md  deno.json  mod.ts  openneuro.ts
content-example/: theme.json
datalad_server/: app.py  datalad.py  dataset.py  files.py  heartbeat.py  snapshots.py
datalad_service/: __init__.py  app.py  config.py  datalad.py  dataset.py  files.py  publish.py  snapshots.py  validator.py
docs/: api.md  cli.md  faq.md  (+11 more)
services/datalad/: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  beat-scheduler  dataset-worker  get_docker_scale.py  hash-paths.js  package.json  pipfiles.diff  publish-worker  pyproject.toml  pytest.ini
services/datalad/datalad_service/: __init__.py  app.py  config.py  datalad.py  version.py
services/datalad/datalad_service/broker/: __init__.py  get_docker_scale.py  scheduler.py  worker_middleware.py
services/datalad/datalad_service/common/: annex.py  asyncio.py  bids.py  celery.py  const.py  dataset_hash.py  draft.py  elasticsearch.py  events.py  git.py  github.py  onchange.py  openneuro.py  redis.py  s3.py  s3_client.py  stream.py  tag_cache.py  user.py
services/datalad/datalad_service/handlers/: annex.py  annex_objects.py  dataset.py  description.py  draft.py  drop.py  exports.py  files.py  fsck.py  git.py  heartbeat.py  history.py  info.py  mosaic.py  objects.py  publish.py  reexporter.py  refs.py  remote_import.py  reset.py  snapshots.py  tree.py  upload.py  upload_file.py  validation.py
services/datalad/datalad_service/middleware/: auth.py  error.py  profiling.py
services/datalad/datalad_service/migrate/: versions.py
services/datalad/datalad_service/tasks/: __init__.py  audit.py  dataset.py  description.py  draft.py  files.py  fsck.py  maintenance.py  mosaic.py  publish.py  remote_import.py  snapshots.py  validator.py
services/datalad/datalad_service/tasks/assets/: schema-1.1.1-datacite.json  schema-1.2.7-datacite.json  validator-config.json
services/datalad/hooks/: pre-receive
services/datalad/tests/: conftest.py  dataset_fixtures.py  profile_get_files.py  test_annex.py  test_annex_handler.py  test_auth.py  test_bids.py  test_common_git.py  test_common_s3.py  test_datalad.py  test_dataset.py  test_description.py  test_draft.py  test_files.py  test_git.py  test_heartbeat.py  test_history.py  test_info.py  test_maintenance.py  test_objects.py  test_publish.py  test_reexporter.py  test_snapshots.py  test_upload.py  test_validator.py
(+833 files in other folders)
