[project]
name = "datalad-service"
description = "HTTP interfaces for manipulating DataLad datasets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aioshutil>=1.5",
    "bidsschematools>=1.0.10",
    "boto3>=1.43.36",
    "charset-normalizer>=3.4.7",
    "dnspython>=2.7.0",
    "falcon>=4.3.1",
    "pygit2>=1.19.3",
    "pygithub>=2.9.1",
    "pyjwt>=2.13.0",
    "requests>=2.34.2",
    "sentry-sdk[falcon]>=2.63.0",
    "taskiq[reload]>=0.12.4",
    "taskiq-redis>=1.2.3",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.28.1",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "datalad>=1.6.0",
    "exceptiongroup>=1.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.7.0",
    "ruff>=0.15.19",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0+unknown"

[tool.hatch.version.raw-options]
root = "../.."

[tool.ruff.format]
quote-style = "single"
